grammers/PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


    package antlr;


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "'from'", "'import'", 
                     "'as'", "'def'", "'return'", "'if'", "'for'", "'in'", 
                     "'@'", "'.'", "':'", "','", "'='", "'('", "')'", "'['", 
                     "']'", "'{'", "'}'", "'<'", "'>'", "'=='" ]

    symbolicNames = [ "<INVALID>", "INDENT", "DEDENT", "FROM", "IMPORT", 
                      "AS", "DEF", "RETURN", "IF", "FOR", "IN", "AT", "DOT", 
                      "COLON", "COMMA", "ASSIGN", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "LBRACE", "RBRACE", "LT", "GT", "EQ", "STRING", 
                      "NUMBER", "ID", "NEWLINE", "WS", "COMMENT", "LINE_JOINING", 
                      "UNKNOWN_CHAR" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_compoundStatement = 2
    RULE_simpleStatement = 3
    RULE_simpleStmt = 4
    RULE_functionDef = 5
    RULE_paramList = 6
    RULE_suite = 7
    RULE_returnStatement = 8
    RULE_assignStatement = 9
    RULE_ifMainStatement = 10
    RULE_decoratorStatement = 11
    RULE_importStatement = 12
    RULE_importList = 13
    RULE_dottedName = 14
    RULE_expression = 15
    RULE_callExpression = 16
    RULE_argList = 17
    RULE_argument = 18
    RULE_genExpr = 19
    RULE_dictAccess = 20
    RULE_listExpression = 21
    RULE_elementList = 22
    RULE_dictExpression = 23
    RULE_keyValuePair = 24
    RULE_primary = 25

    ruleNames =  [ "program", "statement", "compoundStatement", "simpleStatement", 
                   "simpleStmt", "functionDef", "paramList", "suite", "returnStatement", 
                   "assignStatement", "ifMainStatement", "decoratorStatement", 
                   "importStatement", "importList", "dottedName", "expression", 
                   "callExpression", "argList", "argument", "genExpr", "dictAccess", 
                   "listExpression", "elementList", "dictExpression", "keyValuePair", 
                   "primary" ]

    EOF = Token.EOF
    INDENT=1
    DEDENT=2
    FROM=3
    IMPORT=4
    AS=5
    DEF=6
    RETURN=7
    IF=8
    FOR=9
    IN=10
    AT=11
    DOT=12
    COLON=13
    COMMA=14
    ASSIGN=15
    LPAREN=16
    RPAREN=17
    LBRACK=18
    RBRACK=19
    LBRACE=20
    RBRACE=21
    LT=22
    GT=23
    EQ=24
    STRING=25
    NUMBER=26
    ID=27
    NEWLINE=28
    WS=29
    COMMENT=30
    LINE_JOINING=31
    UNKNOWN_CHAR=32

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_program

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ProgramBlockContext(ProgramContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ProgramContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramBlock" ):
                return visitor.visitProgramBlock(self)
            else:
                return visitor.visitChildren(self)



    def program(self):

        localctx = PythonParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.ProgramBlockContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 504695240) != 0):
                self.state = 52
                self.statement()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_statement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class DecoratorStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def decoratorStatement(self):
            return self.getTypedRuleContext(PythonParser.DecoratorStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecoratorStmt" ):
                return visitor.visitDecoratorStmt(self)
            else:
                return visitor.visitChildren(self)


    class CompoundStmtContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def compoundStatement(self):
            return self.getTypedRuleContext(PythonParser.CompoundStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompoundStmt" ):
                return visitor.visitCompoundStmt(self)
            else:
                return visitor.visitChildren(self)


    class EmptyLineContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEmptyLine" ):
                return visitor.visitEmptyLine(self)
            else:
                return visitor.visitChildren(self)


    class SimpleStmtBlockContext(StatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.StatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleStatement(self):
            return self.getTypedRuleContext(PythonParser.SimpleStatementContext,0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)
        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleStmtBlock" ):
                return visitor.visitSimpleStmtBlock(self)
            else:
                return visitor.visitChildren(self)



    def statement(self):

        localctx = PythonParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        self._la = 0 # Token type
        try:
            self.state = 66
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                localctx = PythonParser.SimpleStmtBlockContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 60
                self.simpleStatement()
                self.state = 61
                _la = self._input.LA(1)
                if not(_la==-1 or _la==28):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                pass

            elif la_ == 2:
                localctx = PythonParser.CompoundStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.compoundStatement()
                pass

            elif la_ == 3:
                localctx = PythonParser.DecoratorStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 64
                self.decoratorStatement()
                pass

            elif la_ == 4:
                localctx = PythonParser.EmptyLineContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 65
                self.match(PythonParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CompoundStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_compoundStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class IfMainStmtContext(CompoundStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.CompoundStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ifMainStatement(self):
            return self.getTypedRuleContext(PythonParser.IfMainStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfMainStmt" ):
                return visitor.visitIfMainStmt(self)
            else:
                return visitor.visitChildren(self)


    class DecoratedFuncDefContext(CompoundStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.CompoundStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def functionDef(self):
            return self.getTypedRuleContext(PythonParser.FunctionDefContext,0)

        def decoratorStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.DecoratorStatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.DecoratorStatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDecoratedFuncDef" ):
                return visitor.visitDecoratedFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def compoundStatement(self):

        localctx = PythonParser.CompoundStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_compoundStatement)
        self._la = 0 # Token type
        try:
            self.state = 76
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [6, 11]:
                localctx = PythonParser.DecoratedFuncDefContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==11:
                    self.state = 68
                    self.decoratorStatement()
                    self.state = 73
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 74
                self.functionDef()
                pass
            elif token in [8]:
                localctx = PythonParser.IfMainStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 75
                self.ifMainStatement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_simpleStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MultiSimpleStmtContext(SimpleStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SimpleStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.SimpleStmtContext)
            else:
                return self.getTypedRuleContext(PythonParser.SimpleStmtContext,i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiSimpleStmt" ):
                return visitor.visitMultiSimpleStmt(self)
            else:
                return visitor.visitChildren(self)



    def simpleStatement(self):

        localctx = PythonParser.SimpleStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_simpleStatement)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.MultiSimpleStmtContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.simpleStmt()
            self.state = 83
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==14:
                self.state = 79
                self.match(PythonParser.COMMA)
                self.state = 80
                self.simpleStmt()
                self.state = 85
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SimpleStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_simpleStmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStmtStmtContext(SimpleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SimpleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def assignStatement(self):
            return self.getTypedRuleContext(PythonParser.AssignStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmtStmt" ):
                return visitor.visitAssignStmtStmt(self)
            else:
                return visitor.visitChildren(self)


    class ImportStmtStmtContext(SimpleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SimpleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def importStatement(self):
            return self.getTypedRuleContext(PythonParser.ImportStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitImportStmtStmt" ):
                return visitor.visitImportStmtStmt(self)
            else:
                return visitor.visitChildren(self)


    class ExprStmtStmtContext(SimpleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SimpleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmtStmt" ):
                return visitor.visitExprStmtStmt(self)
            else:
                return visitor.visitChildren(self)


    class ReturnStmtStmtContext(SimpleStmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SimpleStmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def returnStatement(self):
            return self.getTypedRuleContext(PythonParser.ReturnStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmtStmt" ):
                return visitor.visitReturnStmtStmt(self)
            else:
                return visitor.visitChildren(self)



    def simpleStmt(self):

        localctx = PythonParser.SimpleStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_simpleStmt)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                localctx = PythonParser.ImportStmtStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.importStatement()
                pass

            elif la_ == 2:
                localctx = PythonParser.ReturnStmtStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.returnStatement()
                pass

            elif la_ == 3:
                localctx = PythonParser.AssignStmtStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 88
                self.assignStatement()
                pass

            elif la_ == 4:
                localctx = PythonParser.ExprStmtStmtContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 89
                self.expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_functionDef

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class FuncDefContext(FunctionDefContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.FunctionDefContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def DEF(self):
            return self.getToken(PythonParser.DEF, 0)
        def ID(self):
            return self.getToken(PythonParser.ID, 0)
        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)
        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)
        def COLON(self):
            return self.getToken(PythonParser.COLON, 0)
        def suite(self):
            return self.getTypedRuleContext(PythonParser.SuiteContext,0)

        def paramList(self):
            return self.getTypedRuleContext(PythonParser.ParamListContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncDef" ):
                return visitor.visitFuncDef(self)
            else:
                return visitor.visitChildren(self)



    def functionDef(self):

        localctx = PythonParser.FunctionDefContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_functionDef)
        self._la = 0 # Token type
        try:
            localctx = PythonParser.FuncDefContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(PythonParser.DEF)
            self.state = 93
            self.match(PythonParser.ID)
            self.state = 94
            self.match(PythonParser.LPAREN)
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==27:
                self.state = 95
                self.paramList()


            self.state = 98
            self.match(PythonParser.RPAREN)
            self.state = 99
            self.match(PythonParser.COLON)
            self.state = 100
            self.suite()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_paramList

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class NormalParamsContext(ParamListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ParamListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ID)
            else:
                return self.getToken(PythonParser.ID, i)
        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNormalParams" ):
                return visitor.visitNormalParams(self)
            else:
                return visitor.visitChildren(self)


    class RouteParamContext(ParamListContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ParamListContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ID)
            else:
                return self.getToken(PythonParser.ID, i)
        def LT(self):
            return self.getToken(PythonParser.LT, 0)
        def GT(self):
            return self.getToken(PythonParser.GT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRouteParam" ):
                return visitor.visitRouteParam(self)
            else:
                return visitor.visitChildren(self)



    def paramList(self):

        localctx = PythonParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.state = 114
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                localctx = PythonParser.NormalParamsContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.match(PythonParser.ID)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==14:
                    self.state = 103
                    self.match(PythonParser.COMMA)
                    self.state = 104
                    self.match(PythonParser.ID)
                    self.state = 109
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass

            elif la_ == 2:
                localctx = PythonParser.RouteParamContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.match(PythonParser.ID)
                self.state = 111
                self.match(PythonParser.LT)
                self.state = 112
                self.match(PythonParser.ID)
                self.state = 113
                self.match(PythonParser.GT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SuiteContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_suite

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SingleStmtSuiteContext(SuiteContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SuiteContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.NEWLINE)
            else:
                return self.getToken(PythonParser.NEWLINE, i)
        def simpleStatement(self):
            return self.getTypedRuleContext(PythonParser.SimpleStatementContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleStmtSuite" ):
                return visitor.visitSingleStmtSuite(self)
            else:
                return visitor.visitChildren(self)


    class SingleLineSuiteContext(SuiteContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SuiteContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def simpleStatement(self):
            return self.getTypedRuleContext(PythonParser.SimpleStatementContext,0)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSingleLineSuite" ):
                return visitor.visitSingleLineSuite(self)
            else:
                return visitor.visitChildren(self)


    class IndentedSuiteContext(SuiteContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.SuiteContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEWLINE(self):
            return self.getToken(PythonParser.NEWLINE, 0)
        def INDENT(self):
            return self.getToken(PythonParser.INDENT, 0)
        def DEDENT(self):
            return self.getToken(PythonParser.DEDENT, 0)
        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatementContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatementContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndentedSuite" ):
                return visitor.visitIndentedSuite(self)
            else:
                return visitor.visitChildren(self)



    def suite(self):

        localctx = PythonParser.SuiteContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_suite)
        self._la = 0 # Token type
        try:
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                localctx = PythonParser.SingleLineSuiteContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.simpleStatement()
                self.state = 117
                self.match(PythonParser.NEWLINE)
                pass

            elif la_ == 2:
                localctx = PythonParser.IndentedSuiteContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 119
                self.match(PythonParser.NEWLINE)
                self.state = 120
                self.match(PythonParser.INDENT)
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 121
                    self.statement()
                    self.state = 124 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & 504695240) != 0)):
                        break

                self.state = 126
                self.match(PythonParser.DEDENT)
                pass

            elif la_ == 3:
                localctx = PythonParser.SingleStmtSuiteContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.match(PythonParser.NEWLINE)
                self.state = 129
                self.simpleStatement()
                self.state = 130
                self.match(PythonParser.NEWLINE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_returnStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ReturnStmtExprContext(ReturnStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.ReturnStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def RETURN(self):
            return self.getToken(PythonParser.RETURN, 0)
        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmtExpr" ):
                return visitor.visitReturnStmtExpr(self)
            else:
                return visitor.visitChildren(self)



    def returnStatement(self):

        localctx = PythonParser.ReturnStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStatement)
        try:
            localctx = PythonParser.ReturnStmtExprContext(self, localctx)
            self.enterOuterAlt(localctx, 1)
            self.state = 134
            self.match(PythonParser.RETURN)
            self.state = 135
            self.expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return PythonParser.RULE_assignStatement

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class AssignStmtExprContext(AssignStatementContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a PythonParser.AssignStatementContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(PythonParser.ID, 0)
        def ASSIGN(self):
            return self.getToken(PythonParser.ASSIGN, 0)
        def expression(self):
            return self.getTypedRuleContext(PythonParser.ExpressionContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmtExpr" ):
                return visitor.visitAssignStmtExpr(self)
            else:
                return visitor.visitChildren(self)



    def assignStatement(self):
